# VolumeSurfaceDiscreteMeshOptimization

./: README.md
VSDMO/: CMakeLists.txt
VSDMO/cmake/: FindOpenVolumeMesh.cmake
VSDMO/res/shaders/: colors.h  constants.h  flatShading.glsl  flatShadingShowNormals.glsl  helloTri.glsl  hexquadsQuality.glsl  normalDisplay.glsl  phongLighting.glsl  phongLightingNormals.glsl  phongLightingUniform.glsl  pointRange.glsl  quadQuality.glsl  quadsPhongLightingNormals.glsl  quadsPhongLightingNormalsSlice.glsl  quadsToEdges.glsl  quaternion.h  simpleColor.glsl  tetrahedraToTris.glsl  tetrahedraToTrisFlat.glsl  tetrahedraToTrisQuality.glsl  triQuality.glsl  trisToEdges.glsl
VSDMO/src/: CMakeLists.txt  ConfigOpenMesh.h  ConfigUsing.h  CudaAtomic.h  CudaUtil.h  PrintUtil.h  Serializer.h  Timer.cpp  Timer.h  Vec2.h  Vec3.h  main.cu
VSDMO/src/dmo/: DMOBase.h  DMOCommon.cu  DMOCommon.h  DMOConfig.h  DMOHex.cu  DMOHex.h  DMOHexImplCub.h  DMOQuad.cu  DMOQuad.h  DMOQuadImplCub.h  DMOQuality.h  DMOQualityHex.h  DMOQualityQuad.h  DMOQualityTet.h  DMOQualityTri.h  DMOQualityUtil.h  DMOTet.cu  DMOTet.h  DMOTetImplAtomic.h  DMOTetImplCub.h  DMOTri.cu  DMOTri.h  DMOTriFlat.cu  DMOTriFlat.h  DMOTriFlatImplCub.h  DMOTriImplAtomic.h  DMOTriImplCub.h  Laplace.cu  Laplace.h  Surface1D.cu  Surface1D.h  SurfaceCommon.h  SurfaceConfig.h  SurfaceEstimation.h
VSDMO/src/dmo/surfaceP/: Surface.cu  Surface.h  SurfaceFeature.cu  SurfaceFeature.h
VSDMO/src/dmo/surfacePN/: SurfaceFeatureV2.cu  SurfaceFeatureV2.h  SurfaceV2.cu  SurfaceV2.h
VSDMO/src/graphics/: GlmConfig.cpp  GlmConfig.h  GraphicsConfig.h  Viewer.cu  Viewer.h  buffer.cpp  buffer.h  camera.cpp  camera.h  cameraManager.cpp  cameraManager.h  drawable.cpp  drawable.h  drawableHexMesh.cpp  drawableHexMesh.h  drawableMesh.cpp  drawableMesh.h  drawableQuadMesh.cpp  drawableQuadMesh.h  drawableSurface.cpp  drawableSurface.h  drawableTetMesh.cpp  drawableTetMesh.h  drawableTriMesh.cpp  drawableTriMesh.h  gui.cpp  gui.h  imguiWindows.cu  imguiWindows.h  interop.h  shaderManager.cpp  shaderManager.h
VSDMO/src/graphics/imgui/: imgui.h  imgui_draw.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp
VSDMO/src/io/: FileWriter.cu  FileWriter.h  ParserHex.cu  ParserHex.h  ParserOFF.cu  ParserOFF.h  ParserTetGen.cu  ParserTetGen.h  ParserUtil.cpp  ParserUtil.h
VSDMO/src/mesh/: CSR.h  CompressedHalfedges.h  CopyUtil.cu  CopyUtil.h  DMOMeshBase.h  DMOMeshHex.h  DMOMeshQuad.h  DMOMeshTet.h  DMOMeshTri.h  MeshBaseGPU.h  MeshFactory.cu  MeshFactory.h  MeshFunctions.cu  MeshFunctions.h  MeshGPUCommon.cu  MeshGPUCommon.h  MeshHexGPU.cu  MeshHexGPU.h  MeshQuadGPU.cu  MeshQuadGPU.h  MeshTetGPU.cu  MeshTetGPU.h  MeshTriGPU.cu  MeshTriGPU.h  MeshTypes.h  SortUtil.cu  SortUtil.h  VertexColoring.cu  VertexColoring.h
